# OpenGoogleImageGeneratorMCP

./: .env.example  .gitignore  LICENSE  README.md  config.py  discovery.py  format_converter.py  genai_tools.py  mcp_server.py  model_registry.py  pipeline.py  pyproject.toml  requirements.txt  update.py  vertex_ai_tools.py
docs/superpowers/plans/: 2026-05-18-feature-expansion.md  2026-05-19-v3-expansion.md
docs/superpowers/specs/: 2026-05-18-feature-expansion-design.md  2026-05-19-v3-expansion-design.md
tests/: test_config.py  test_config_genai.py  test_discovery.py  test_format_converter.py  test_genai_tools.py  test_mcp_server.py  test_model_registry.py  test_pipeline.py  test_update_script.py  test_update_warning.py  test_vertex_ai_tools.py
